fix(frontend): repository-card title overflow
fix repository-card title overflow on mobile, by adding word-break title
CSS and set the value to break-all

--- a/frontend/src/components/repository-card/repository-card.css
+++ b/frontend/src/components/repository-card/repository-card.css
@@ -35,6 +35,7 @@
 .repository-card__title {
   font-size: 2.4rem;
   font-weight: 600;
+  word-break: break-all;
   text-decoration: none;
   color: #efefef;
   line-height: 1em;
